Fixed wc-media overflow

--- a/app/webcat/wc-media/wc-media.scss
+++ b/app/webcat/wc-media/wc-media.scss
@@ -1,19 +1,24 @@
 wc-media {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  .img-wrapper {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
+  .wc-media-wrapper {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    .img-wrapper {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      min-height: 60px;
+      outline: none;
+    }
   }
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    min-height: 60px;
-    outline: none;
+  .wc-media-wrapper.overflow {
+    overflow: inherit;
   }
 }
 md-icon.menu-right {
